--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cruds
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.url=${DB_URL:jdbc:mysql://localhost:3306/cruds}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:12345678}
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=${DB_DDL_AUTO:create}
