--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>1.3.3</version>
+        </dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
